[gd_scene load_steps=4 format=3 uid="uid://bknf1b0r15bki"]

[ext_resource type="Script" path="res://scripts/attack_ajo.gd" id="1_ud6gs"]
[ext_resource type="Texture2D" uid="uid://bx7ug2w8u5cyi" path="res://sprites/enemy/AjoMalOlor/SpriteHumo_ajo.png" id="2_o1rwh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7bmvc"]
radius = 3.0

[node name="ataque_ajo" type="Area2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_ud6gs")
metadata/_edit_lock_ = true

[node name="SpriteHumoAjo" type="Sprite2D" parent="."]
position = Vector2(-1, -2)
scale = Vector2(0.0376302, 0.0344907)
texture = ExtResource("2_o1rwh")
hframes = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7bmvc")
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
